Add resume, update website

--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Evan Howard</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="blurb">
-        <h1>Hi there, I'm Evan Howard!</h1>
-        <p>I'm a student at Harvard University concentrating in Computer Science!
-			I'm an aspiring software engineer looking to make a real difference in the world
-			through technology, currently looking for an SWE internship for summer 2022!
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Evan Howard</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com/">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <style>
+            .flipX video::-webkit-media-text-track-display {
+                transform: matrix(-1, 0, 0, 1, 0, 0) !important;
+            }
+            .flipXY video::-webkit-media-text-track-display {
+                transform: matrix(-1, 0, 0, -1, 0, 0) !important;
+            }
+            .flipXYX video::-webkit-media-text-track-display {
+                transform: matrix(1, 0, 0, -1, 0, 0) !important;
+            }</style></head>
+    <body>
+        <h1>Evan Howard</h1>
+        <h3>CS @ Harvard</h3>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/evanphoward/">LinkedIn</a></li>
+            <li><a href="https://github.com/evanphoward">GitHub</a></li>
+            <li><a href="./resume.pdf" target="blank">Resume</a></li>
+            <li><a href="mailto:evanhoward@college.harvard.edu">Email</a></li>
+        </ul>
+    
 
-			At Harvard, I'm a member of the Harvard Computer Society! Last summer, I had a great
-			time working at ID.me as a Software Engineer Intern and gained a lot of valuable experience and skills.
-		</p>
-      </div>
-    </div>
-    <footer>
-      <ul>
-        <li><a href="mailto:evanhoward@college.harvard.edu">REPLACE_ME</a></li>
-        <li>
-          <a href="https://github.com/evanphoward">github.com/REPLACE_ME</a>
-        </li>
-      </ul>
-    </footer>
-  </body>
-</html>
-
+</body></html>
