--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <h1>Evan Howard</h1>
         <h3>CS @ Harvard</h3>
         <ul>
-            <li><a href="https://www.linkedin.com/in/evanphoward/">LinkedIn</a></li>
-            <li><a href="https://github.com/evanphoward">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/evanphoward/" target="blank">LinkedIn</a></li>
+            <li><a href="https://github.com/evanphoward" target="blank">GitHub</a></li>
             <li><a href="./resume.pdf" target="blank">Resume</a></li>
-            <li><a href="mailto:evanhoward@college.harvard.edu">Email</a></li>
+            <li><a href="mailto:evanhoward@college.harvard.edu" target="blank">Email</a></li>
         </ul>
     
 
