fix linkedin link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Evan Howard</h1>
         <h3>CS @ Harvard</h3>
         <ul>
-            <li><a href="https://www.linkedin.com/in/evanphoward/" target="blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/evan-p-howard/" target="blank">LinkedIn</a></li>
             <li><a href="https://github.com/evanphoward" target="blank">GitHub</a></li>
             <li><a href="./resume.pdf" target="blank">Resume</a></li>
             <li><a href="mailto:evanhoward@college.harvard.edu" target="blank">Email</a></li>
