--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Evan Howard</title>
 		<link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com/">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-    <style>
-            .flipX video::-webkit-media-text-track-display {
-                transform: matrix(-1, 0, 0, 1, 0, 0) !important;
-            }
-            .flipXY video::-webkit-media-text-track-display {
-                transform: matrix(-1, 0, 0, -1, 0, 0) !important;
-            }
-            .flipXYX video::-webkit-media-text-track-display {
-                transform: matrix(1, 0, 0, -1, 0, 0) !important;
-            }</style></head>
-    <body>
+    </head>
+    <script>
+        function randRGB() {
+            return Math.floor(Math.random() * 255);
+        }
+        function setBackground(){
+            document.body.style.backgroundImage = "linear-gradient( 109.6deg, rgba("+randRGB()+","+randRGB()+","+randRGB()+",1) 1.8%, \
+                                                    rgba("+randRGB()+","+randRGB()+","+randRGB()+",1) 50.6%, rgba("+randRGB()+","+randRGB()+","+randRGB()+",1) 100.3% )";
+        }
+    </script>
+    <body onload="setBackground();">
         <h1>Evan Howard</h1>
         <h3>CS @ Harvard</h3>
         <ul>
